# Mabishion-AI

./: .gitignore  CLAUDE.md  README.md  fix_glow.cjs  index.html  launch.sh  nexious_ai_documentation.md  package-lock.json  package.json  playwright.config.js  tailwind.config.js  update_colors.cjs  vite.config.e2e.js  vite.config.js
.agents/: AGENT_BOOTSTRAP.md  ENTERPRISE_REPORTING_STANDARD.md  EXECUTION_WORKFLOW.md  SELF_REVIEW_STANDARD.md
.claude/: CLAUDE.md  launch.json  settings.json
.github/workflows/: auto-assign.yml  build.yml  codeql.yml  copilot-setup-steps.yml  release.yml
Information and Vision/: ADR-001-registry-driven-approval-policy.md  AGENTS.md  AI_Product_Studio_v4_FINAL_Blueprint.txt  BLUEPRINT-CODE-SYNC-PLAN.md  E5-PRODUCT-OWNER-DECISIONS.md  E5-RUNTIME-VERIFICATION-SCRIPT.md  ENGINEERING-GOVERNANCE-MODEL-v2.0.md  ENGINEERING-LIFECYCLE-STANDARD-v1.0.md  ENGINEERING-LIFECYCLE-STANDARD-v1.1.md  ENTERPRISE-BLUEPRINT-VERIFICATION-SUMMARY.md  FILE_PRIORITY_MAP.md  GLOBAL_RULES.md  GOVERNANCE_RULES.md  IMPLEMENTATION-BACKLOG.md  MASTER_RULES.md  PROJECT_LEDGER.md  PROJECT_RULES.md  SKILLgod.md  UI-UX-ARCHITECTURE-DIRECTION-v1.0.md  VISION_LOCK.md  WORKSPACE_MAP.md  WORKSPACE_RULES.md  review.md  workspacerules.md
Information and Vision/archive/: MABISHION-IMPLEMENTATION-SEQUENCE.md  (+3 more)
docs/: CHANGELOG.md  ENTERPRISE_DEPLOYMENT_READINESS.md  FINAL_ENTERPRISE_ROADMAP.md  REQUIREMENTS_TRACEABILITY_MATRIX.md  TESTING_STRATEGY.md
scripts/: autopush.sh  backup-to-mega.sh
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+161 files in other folders)
