[package]
name = "mabishion-ai"
version = "0.1.0"
description = "Mabishion AI — Private Desktop Factory"
authors = ["Adii / Mabishion AI"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
tauri-plugin-fs = "2.0.0"
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "full"] }
chrono = "0.4"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
suppaftp = { version = "5.3", features = ["native-tls"] }
walkdir = "2.4"
argon2 = "0.5"
rand = "0.8"


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
